# hallucination-detection-model

./: .gitignore  README.md  pyproject.toml  requirements-cpu.txt  requirements.txt  setup.py
hdm2/: model.py
hdm2/models/: context_knowledge.py
hdm2/utils/: load_models.py  model_utils.py  render_utils.py
utils/: debug_utils.py  load_models.py  model_utils.py
