[project]
name = "hdm2"
version = "0.1.0"
authors = [
  { name="Bibek Paudel", email="paudel.bibek@gmail.com" },
]
description = "HDM2: Hallucination Detection Model by AimonLabs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "torch",
  "transformers",
  "peft",
  "nltk",
  "numpy",
  "huggingface-hub",
  "safetensors",
  "tqdm"
]

[project.optional-dependencies]
gpu = ["accelerate"]

[tool.setuptools]
packages = ["hdm2"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/aimonlabs/hallucination-detection-model"
Issues = "https://github.com/aimonlabs/hallucination-detection-model"